# CppOpenGLMetaballs

./: .gitignore  CMakeLists.txt  Readme.md  Reamde.md  b  r
Shaders/: blob.frag  blob.vert  metaball.frag
Source/: Blob.cpp  BlobSimulation.cpp  BlobSimulation.h  ShaderManager.cpp  ShaderManager.h  main.cpp
shaders/: metaball.frag  metaball.vert
src/: Blob.cpp  Blob.h  BlobSimulation.cpp
tests/: blob_tests.cpp
